Fix weiter and zurück button disappearing on small screens

--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -1341,6 +1341,7 @@ UPLOAD STYLES
     text-align: center;
     margin: 2em 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
